<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/app_padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/spinner_list_item_width"
                android:layout_height="@dimen/spinner_list_item_height"
                android:src="@mipmap/courier_icon_or"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/couriername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textSize="@dimen/history_courier_name_text_size"
                android:text="@string/courier_name"
                >
            </TextView>
            <TextView
                android:id="@+id/trackno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textSize="@dimen/history_courier_track_no_text_size"
                android:textColor="@drawable/history_text_selector"
                android:text="@string/trackno"
                >
            </TextView>
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="gone"
                android:text="@string/courier_history_last_search"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>