<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ads_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ads_layout_height"
            android:layout_marginTop="@dimen/ads_layout_margin_from_top"
            android:orientation="horizontal"
            >

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ads_layout">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spinner_margin_from_top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <Spinner
                    android:id="@+id/courier_service"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/spinner_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:prompt="@string/enter_courier">
                </Spinner>

                <TextView
                    android:id="@+id/statictxt"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/autocomplete_static_text"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    >
                </TextView>
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView1"
                    android:hint="Search By Name"
                    android:background="@drawable/spinner_selector"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_textview_height"
                    />



                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_text_margin_top"
                    android:visibility="gone"
                    android:text="@string/multiplenos"
                    android:textColor="@color/app_home_screen_text"
                    android:textSize="@dimen/awb_text_size"
                    />

                <EditText
                    android:id="@+id/trackno"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="Tracking No"
                    android:paddingLeft="2dp"
                    >
                </EditText>

                <TextView
                    android:id="@+id/errortxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/errormsg_mainscreen"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="14sp"
                    android:visibility="gone"
                    >
                </TextView>

                <LinearLayout
                    android:id="@+id/button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:id="@+id/button_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg_selector"
                        android:clickable="false"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:src="@android:drawable/ic_menu_search"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:text="Submit"
                            android:textColor="@drawable/text_selector"
                            android:textSize="20sp"
                            >
                        </Button>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>